# NotebookX

./: .gitignore  Cargo.toml  README.md
notebookx/: Cargo.toml
src/: file_io.rs  main.rs  notebook.rs  onenote_converter.rs
