[package]
name = "notebookx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notebookx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.15"

[dev-dependencies]
tempfile = "3.0"